-- updated the scope on all these snippets to work with "text.html.smarty" only. seemed to make more sense.
git-svn-id: http://svn.textmate.org/trunk/Bundles/PHP-Smarty.tmbundle@1362 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/smty.assign.plist
+++ b/Snippets/smty.assign.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.assign ({assign)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{assign</string>
 	<key>uuid</key>
