--- a/Snippets/smty.capture.plist
+++ b/Snippets/smty.capture.plist
@@ -9,7 +9,7 @@
 	<key>name</key>
 	<string>smty.capture ({capture)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{capture</string>
 	<key>uuid</key>
