--- a/Snippets/smty.count_words.plist
+++ b/Snippets/smty.count_words.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.count_words (|count_words)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|count_words</string>
 	<key>uuid</key>
