--- a/Snippets/smty.debug.plist
+++ b/Snippets/smty.debug.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.debug ({debug)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{debug</string>
 	<key>uuid</key>
