--- a/Snippets/smty.escape.plist
+++ b/Snippets/smty.escape.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.escape (|escape)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|escape</string>
 	<key>uuid</key>
