--- a/Snippets/smty.if.plist
+++ b/Snippets/smty.if.plist
@@ -10,7 +10,7 @@ $4
 	<key>name</key>
 	<string>smty.if ({if)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{if</string>
 	<key>uuid</key>
