--- a/Snippets/smty.indent.plist
+++ b/Snippets/smty.indent.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.indent (|indent)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|indent</string>
 	<key>uuid</key>
