--- a/Snippets/smty.strip 2.plist
+++ b/Snippets/smty.strip 2.plist
@@ -9,7 +9,7 @@ $1
 	<key>name</key>
 	<string>smty.strip ({strip)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{strip</string>
 	<key>uuid</key>
