--- a/Snippets/smty.wordwrap.plist
+++ b/Snippets/smty.wordwrap.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.wordwrap (|wordwrap)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|wordwrap</string>
 	<key>uuid</key>
