--- a/Snippets/smty.config_load.plist
+++ b/Snippets/smty.config_load.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.config_load ({config_load)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{config_load</string>
 	<key>uuid</key>
