--- a/Snippets/smty.count_characters .plist
+++ b/Snippets/smty.count_characters .plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.count_characters (|count_characters)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|count_characters</string>
 	<key>uuid</key>
