--- a/Snippets/smty.count_sentences.plist
+++ b/Snippets/smty.count_sentences.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.count_sentences (|count_sentences)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|count_sentences</string>
 	<key>uuid</key>
