--- a/Snippets/smty.counter.plist
+++ b/Snippets/smty.counter.plist
@@ -8,7 +8,7 @@
 	<key>name</key>
 	<string>smty.counter ({counter)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{counter</string>
 	<key>uuid</key>
