--- a/Snippets/smty.cycle.plist
+++ b/Snippets/smty.cycle.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.cycle ({cycle)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{cycle</string>
 	<key>uuid</key>
