--- a/Snippets/smty.default.plist
+++ b/Snippets/smty.default.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.default (|default)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|default</string>
 	<key>uuid</key>
