--- a/Snippets/smty.eval.plist
+++ b/Snippets/smty.eval.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.eval ({eval)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{eval</string>
 	<key>uuid</key>
