--- a/Snippets/smty.foreach.plist
+++ b/Snippets/smty.foreach.plist
@@ -9,7 +9,7 @@ $2
 	<key>name</key>
 	<string>smty.foreach ({foreach)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{foreach</string>
 	<key>uuid</key>
