--- a/Snippets/smty.foreachelse.plist
+++ b/Snippets/smty.foreachelse.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.foreachelse ({foreachelse)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{foreachelse</string>
 	<key>uuid</key>
