--- a/Snippets/smty.include.plist
+++ b/Snippets/smty.include.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.include ({include)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{include</string>
 	<key>uuid</key>
