--- a/Snippets/smty.include_php.plist
+++ b/Snippets/smty.include_php.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.include_php ({include_php)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{include_php</string>
 	<key>uuid</key>
