--- a/Snippets/smty.insert.plist
+++ b/Snippets/smty.insert.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.insert ({insert)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{insert</string>
 	<key>uuid</key>
