--- a/Snippets/smty.ldelim.plist
+++ b/Snippets/smty.ldelim.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.ldelim ({ldelim)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{ldelim</string>
 	<key>uuid</key>
