--- a/Snippets/smty.literal.plist
+++ b/Snippets/smty.literal.plist
@@ -9,7 +9,7 @@ $1
 	<key>name</key>
 	<string>smty.literal ({literal)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{literal</string>
 	<key>uuid</key>
