--- a/Snippets/smty.lower.plist
+++ b/Snippets/smty.lower.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.lower (|lower)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|lower</string>
 	<key>uuid</key>
