--- a/Snippets/smty.math.plist
+++ b/Snippets/smty.math.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.math ({math)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{math</string>
 	<key>uuid</key>
