--- a/Snippets/smty.nl2br.plist
+++ b/Snippets/smty.nl2br.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.nl2br (|nl2br)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|nl2br</string>
 	<key>uuid</key>
