--- a/Snippets/smty.rdelim.plist
+++ b/Snippets/smty.rdelim.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.rdelim ({rdelim)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{rdelim</string>
 	<key>uuid</key>
