--- a/Snippets/smty.spacify.plist
+++ b/Snippets/smty.spacify.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.spacify (|spacify)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|spacify</string>
 	<key>uuid</key>
