--- a/Snippets/smty.string_format.plist
+++ b/Snippets/smty.string_format.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.string_format (|string_format)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|string_format</string>
 	<key>uuid</key>
