--- a/Snippets/smty.strip.plist
+++ b/Snippets/smty.strip.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.strip (|strip)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|strip</string>
 	<key>uuid</key>
