--- a/Snippets/smty.strip_tags.plist
+++ b/Snippets/smty.strip_tags.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.strip_tags (|strip_tags)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|strip_tags</string>
 	<key>uuid</key>
