--- a/Snippets/smty.truncate.plist
+++ b/Snippets/smty.truncate.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.truncate (|truncate)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|truncate</string>
 	<key>uuid</key>
