--- a/Snippets/smty.upper.plist
+++ b/Snippets/smty.upper.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>smty.upper (|upper)</string>
 	<key>scope</key>
-	<string>source.php, source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|upper</string>
 	<key>uuid</key>
