• rename to PHP (Smarty) (seems to be our convention)
git-svn-id: http://svn.textmate.org/trunk/Bundles/PHP-Smarty.tmbundle@2026 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/PHP-Smarty.plist
+++ b/Syntaxes/PHP-Smarty.plist
@@ -9,7 +9,7 @@
 	<key>foldingStopMarker</key>
 	<string>(&lt;/(?i:(head|table|tr|div|style|script|ul|ol|form|dl))&gt;|\{\{?/(if|foreach|capture|literal|foreach|php|section|strip)|(^|\s)\})</string>
 	<key>name</key>
-	<string>PHP-Smarty</string>
+	<string>PHP (Smarty)</string>
 	<key>patterns</key>
 	<array>
 		<dict>
