--- a/Snippets/smty.count_words.plist
+++ b/Snippets/smty.count_words.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|count_words</string>
 	<key>name</key>
-	<string>smty.count_words (|count_words)</string>
+	<string>Count Words (|count_words)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
