--- a/Snippets/smty.cycle.plist
+++ b/Snippets/smty.cycle.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{cycle values="#SELSTART#foo,bar#SELEND#" name="default" print=true advance=true delimiter="," assign=varname }</string>
 	<key>name</key>
-	<string>smty.cycle ({cycle)</string>
+	<string>Cycle ({cycle)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
