--- a/Snippets/smty.debug.plist
+++ b/Snippets/smty.debug.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{debug output="#SELSTART#html|javascript#SELEND#" } </string>
 	<key>name</key>
-	<string>smty.debug ({debug)</string>
+	<string>Debug ({debug)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
