--- a/Snippets/smty.fetch.plist
+++ b/Snippets/smty.fetch.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{fetch file="#SELSTART#http:// or file#SELEND#" assign=varname} </string>
 	<key>name</key>
-	<string>smty.fetch ({fetch)</string>
+	<string>Fetch ({fetch)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
