--- a/Snippets/smty.if.plist
+++ b/Snippets/smty.if.plist
@@ -8,7 +8,7 @@
 $4
 {/if}</string>
 	<key>name</key>
-	<string>smty.if ({if)</string>
+	<string>If ({if)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
