--- a/Snippets/smty.include.plist
+++ b/Snippets/smty.include.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{include file="$1" [assign=varname foo="bar"] }</string>
 	<key>name</key>
-	<string>smty.include ({include)</string>
+	<string>Include ({include)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
