--- a/Snippets/smty.literal.plist
+++ b/Snippets/smty.literal.plist
@@ -7,7 +7,7 @@
 $1
 {/literal}</string>
 	<key>name</key>
-	<string>smty.literal ({literal)</string>
+	<string>Literal ({literal)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
