--- a/Snippets/smty.nl2br.plist
+++ b/Snippets/smty.nl2br.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|nl2br</string>
 	<key>name</key>
-	<string>smty.nl2br (|nl2br)</string>
+	<string>nl2br (|nl2br)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
