--- a/Snippets/smty.truncate.plist
+++ b/Snippets/smty.truncate.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|truncate:${1:80}:${2:"&amp;hellip;"}:${3:false}</string>
 	<key>name</key>
-	<string>smty.truncate (|truncate)</string>
+	<string>Truncate (|truncate)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
