--- a/Snippets/smty.assign.plist
+++ b/Snippets/smty.assign.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{assign var=$1 value="$2"}</string>
 	<key>name</key>
-	<string>smty.assign ({assign)</string>
+	<string>Assign ({assign)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
