--- a/Snippets/smty.capture.plist
+++ b/Snippets/smty.capture.plist
@@ -7,7 +7,7 @@
 #SELECT#
 {/capture}</string>
 	<key>name</key>
-	<string>smty.capture ({capture)</string>
+	<string>Capture ({capture)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
