--- a/Snippets/smty.cat.plist
+++ b/Snippets/smty.cat.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|cat:"${1:text to add}"</string>
 	<key>name</key>
-	<string>smty.cat (|cat)</string>
+	<string>Cat (|cat)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
