--- a/Snippets/smty.counter.plist
+++ b/Snippets/smty.counter.plist
@@ -6,7 +6,7 @@
 	<string>{counter name="#INSERTION#" start=1 skip=1 direction="up" print=true assign="foo" }
 {counter}</string>
 	<key>name</key>
-	<string>smty.counter ({counter)</string>
+	<string>Counter ({counter)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
