--- a/Snippets/smty.escape.plist
+++ b/Snippets/smty.escape.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|escape:"${1:html|htmlall|url|quotes|hex|hexentity|javascript}" </string>
 	<key>name</key>
-	<string>smty.escape (|escape)</string>
+	<string>Escape (|escape)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
