--- a/Snippets/smty.foreach.plist
+++ b/Snippets/smty.foreach.plist
@@ -7,7 +7,7 @@
 $2
 {/foreach}</string>
 	<key>name</key>
-	<string>smty.foreach ({foreach)</string>
+	<string>Foreach ({foreach)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
