--- a/Snippets/smty.include_php.plist
+++ b/Snippets/smty.include_php.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{include_php file="$1" [once=true foo="bar"] }</string>
 	<key>name</key>
-	<string>smty.include_php ({include_php)</string>
+	<string>Include PHP ({include_php)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
