--- a/Snippets/smty.regex_replace.plist
+++ b/Snippets/smty.regex_replace.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|regex_replace:"${1:regex}":"$2" </string>
 	<key>name</key>
-	<string>smty.regex_replace (|regex_replace)</string>
+	<string>Regex Replace (|regex_replace)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
