--- a/Snippets/smty.strip 2.plist
+++ b/Snippets/smty.strip 2.plist
@@ -7,7 +7,7 @@
 $1
 {/strip}</string>
 	<key>name</key>
-	<string>smty.strip ({strip)</string>
+	<string>Strip ({strip)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
