--- a/Snippets/smty.strip_tags.plist
+++ b/Snippets/smty.strip_tags.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|strip_tags </string>
 	<key>name</key>
-	<string>smty.strip_tags (|strip_tags)</string>
+	<string>Strip Tags (|strip_tags)</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
