• let’s just redirect to Mike Zornek excellent blog entry about how to make this bundle work
git-svn-id: http://svn.textmate.org/trunk/Bundles/Smarty.tmbundle@3364 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -6,6 +6,7 @@
 	<string>Smarty</string>
 	<key>ordering</key>
 	<array>
+		<string>EB4A8FA5-DFBD-43E9-B091-B1825E49DF33</string>
 		<string>D94473F0-DE96-405A-B2BB-8C9ADECF5C2A</string>
 		<string>F68F299E-A8DC-4E77-88DB-C0956D990838</string>
 		<string>D133AAD0-4E0A-45A7-B67B-43456AF97CB2</string>
