• remove mention of tab trigger from the name
git-svn-id: http://svn.textmate.org/trunk/Bundles/Smarty.tmbundle@3648 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/smty.assign.plist
+++ b/Snippets/smty.assign.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{assign var=$1 value="$2"}</string>
 	<key>name</key>
-	<string>Assign ({assign)</string>
+	<string>Assign</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
