--- a/Snippets/smty.capitalize.plist
+++ b/Snippets/smty.capitalize.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|capitalize</string>
 	<key>name</key>
-	<string>Capitalize (|capitalize)</string>
+	<string>Capitalize</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
