--- a/Snippets/smty.config_load.plist
+++ b/Snippets/smty.config_load.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{config_load file="#INSERTION#" [section="" scope="local|parent|global"] }</string>
 	<key>name</key>
-	<string>Config Load ({config_load)</string>
+	<string>Config Load</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
