--- a/Snippets/smty.count_paragraphs.plist
+++ b/Snippets/smty.count_paragraphs.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|count_paragraphs</string>
 	<key>name</key>
-	<string>Count Paragraphs (|count_paragraphs)</string>
+	<string>Count Paragraphs</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
