--- a/Snippets/smty.count_sentences.plist
+++ b/Snippets/smty.count_sentences.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|count_sentences</string>
 	<key>name</key>
-	<string>Count Sentences (|count_sentences)</string>
+	<string>Count Sentences</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
