--- a/Snippets/smty.foreachelse.plist
+++ b/Snippets/smty.foreachelse.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{foreachelse}</string>
 	<key>name</key>
-	<string>Foreachelse ({foreachelse)</string>
+	<string>Foreachelse</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
