--- a/Snippets/smty.insert.plist
+++ b/Snippets/smty.insert.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{insert name="insert_$1" [assign=varname script="foo.php" foo="bar"] }</string>
 	<key>name</key>
-	<string>Insert ({insert)</string>
+	<string>Insert</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
