--- a/Snippets/smty.ldelim.plist
+++ b/Snippets/smty.ldelim.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{ldelim}</string>
 	<key>name</key>
-	<string>Ldelim ({ldelim)</string>
+	<string>Ldelim</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
