--- a/Snippets/smty.lower.plist
+++ b/Snippets/smty.lower.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|lower</string>
 	<key>name</key>
-	<string>Lower (|lower)</string>
+	<string>Lower</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
