--- a/Snippets/smty.string_format.plist
+++ b/Snippets/smty.string_format.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|string_format:"${1:sprintf formatting}" </string>
 	<key>name</key>
-	<string>String Format (|string_format)</string>
+	<string>String Format</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
