--- a/Snippets/smty.upper.plist
+++ b/Snippets/smty.upper.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|upper</string>
 	<key>name</key>
-	<string>Upper (|upper)</string>
+	<string>Upper</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
