--- a/Snippets/smty.wordwrap.plist
+++ b/Snippets/smty.wordwrap.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|wordwrap:${1:80}:"${2:\n}":${3:false}</string>
 	<key>name</key>
-	<string>Word Wrap (|wordwrap)</string>
+	<string>Word Wrap</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
