--- a/Snippets/smty.count_characters .plist
+++ b/Snippets/smty.count_characters .plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|count_characters</string>
 	<key>name</key>
-	<string>Count Characters (|count_characters)</string>
+	<string>Count Characters</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
