--- a/Snippets/smty.date_format.plist
+++ b/Snippets/smty.date_format.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|date_format:"${1:strftime() formatting}" </string>
 	<key>name</key>
-	<string>Date Format (|date_format)</string>
+	<string>Date Format</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
