--- a/Snippets/smty.default.plist
+++ b/Snippets/smty.default.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|default:"$1" </string>
 	<key>name</key>
-	<string>Default (|default)</string>
+	<string>Default</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
