--- a/Snippets/smty.eval.plist
+++ b/Snippets/smty.eval.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{eval var="#SELSTART#{template_format}#SELEND#" assign=varname} </string>
 	<key>name</key>
-	<string>Eval ({eval)</string>
+	<string>Eval</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
