--- a/Snippets/smty.indent.plist
+++ b/Snippets/smty.indent.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|indent:${1:4}[:""]</string>
 	<key>name</key>
-	<string>Indent (|indent)</string>
+	<string>Indent</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
