--- a/Snippets/smty.math.plist
+++ b/Snippets/smty.math.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{math equation="${1:1+x}" assign=$2 ${3:x=8}} </string>
 	<key>name</key>
-	<string>Math ({math)</string>
+	<string>Math</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
