--- a/Snippets/smty.rdelim.plist
+++ b/Snippets/smty.rdelim.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>{rdelim}</string>
 	<key>name</key>
-	<string>Rdelim ({rdelim)</string>
+	<string>Rdelim</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
