--- a/Snippets/smty.replace.plist
+++ b/Snippets/smty.replace.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|replace:"${1:needle}":"$2" </string>
 	<key>name</key>
-	<string>Replace (|replace)</string>
+	<string>Replace</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
