--- a/Snippets/smty.spacify.plist
+++ b/Snippets/smty.spacify.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|spacify:"${1: }" </string>
 	<key>name</key>
-	<string>Spacify (|spacify)</string>
+	<string>Spacify</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
