--- a/Snippets/smty.strip.plist
+++ b/Snippets/smty.strip.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>|strip:["${1: }"]</string>
 	<key>name</key>
-	<string>Strip (|strip)</string>
+	<string>Strip</string>
 	<key>scope</key>
 	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
