Remove swallow use in favor of a constant.character.escape pattern.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Smarty.tmbundle@4625 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Smarty.plist
+++ b/Syntaxes/Smarty.plist
@@ -63,8 +63,15 @@
 			<string>'</string>
 			<key>name</key>
 			<string>string.quoted.single.smarty</string>
-			<key>swallow</key>
-			<string>\\.</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>match</key>
+					<string>\\.</string>
+					<key>name</key>
+					<string>constant.character.escape.untitled</string>
+				</dict>
+			</array>
 		</dict>
 		<dict>
 			<key>begin</key>
@@ -73,8 +80,15 @@
 			<string>"</string>
 			<key>name</key>
 			<string>string.quoted.double.smarty</string>
-			<key>swallow</key>
-			<string>\\.</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>match</key>
+					<string>\\.</string>
+					<key>name</key>
+					<string>constant.character.escape.untitled</string>
+				</dict>
+			</array>
 		</dict>
 		<dict>
 			<key>match</key>
