In my drunken stupor I left some constant.character.escape.untitled as I ran through the bundles, changing these to constant.character.escape.≪lang≫
git-svn-id: http://svn.textmate.org/trunk/Bundles/Smarty.tmbundle@4660 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Smarty.plist
+++ b/Syntaxes/Smarty.plist
@@ -69,7 +69,7 @@
 					<key>match</key>
 					<string>\\.</string>
 					<key>name</key>
-					<string>constant.character.escape.untitled</string>
+					<string>constant.character.escape.smarty</string>
 				</dict>
 			</array>
 		</dict>
@@ -86,7 +86,7 @@
 					<key>match</key>
 					<string>\\.</string>
 					<key>name</key>
-					<string>constant.character.escape.untitled</string>
+					<string>constant.character.escape.smarty</string>
 				</dict>
 			</array>
 		</dict>
