--- a/Syntaxes/Smarty.plist
+++ b/Syntaxes/Smarty.plist
@@ -15,6 +15,14 @@
 		<dict>
 			<key>begin</key>
 			<string>(?&lt;=\{)\*</string>
+			<key>captures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.comment.smarty</string>
+				</dict>
+			</dict>
 			<key>end</key>
 			<string>\*(?=\})</string>
 			<key>name</key>
@@ -59,8 +67,24 @@
 		<dict>
 			<key>begin</key>
 			<string>'</string>
+			<key>beginCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.begin.smarty</string>
+				</dict>
+			</dict>
 			<key>end</key>
 			<string>'</string>
+			<key>endCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.end.smarty</string>
+				</dict>
+			</dict>
 			<key>name</key>
 			<string>string.quoted.single.smarty</string>
 			<key>patterns</key>
@@ -76,8 +100,24 @@
 		<dict>
 			<key>begin</key>
 			<string>"</string>
+			<key>beginCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.begin.smarty</string>
+				</dict>
+			</dict>
 			<key>end</key>
 			<string>"</string>
+			<key>endCaptures</key>
+			<dict>
+				<key>0</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.string.end.smarty</string>
+				</dict>
+			</dict>
 			<key>name</key>
 			<string>string.quoted.double.smarty</string>
 			<key>patterns</key>
@@ -91,14 +131,30 @@
 			</array>
 		</dict>
 		<dict>
+			<key>captures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.variable.smarty</string>
+				</dict>
+			</dict>
 			<key>match</key>
-			<string>\b\$Smarty\.</string>
+			<string>\b(\$)Smarty\.</string>
 			<key>name</key>
 			<string>variable.other.global.smarty</string>
 		</dict>
 		<dict>
+			<key>captures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.variable.smarty</string>
+				</dict>
+			</dict>
 			<key>match</key>
-			<string>\$[a-zA-Z_\x{7f}-\x{ff}][a-zA-Z0-9_\x{7f}-\x{ff}]*?\b</string>
+			<string>(\$)[a-zA-Z_\x{7f}-\x{ff}][a-zA-Z0-9_\x{7f}-\x{ff}]*?\b</string>
 			<key>name</key>
 			<string>variable.other.smarty</string>
 		</dict>
