Complete renaming of bundle to PHP Smarty.
git-svn-id: http://svn.textmate.org/trunk/Bundles/PHP Smarty.tmbundle@8064 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -9,7 +9,7 @@
 	<key>description</key>
 	<string>&lt;a href="http://smarty.php.net/"&gt;Smarty&lt;/a&gt; is a template/presentation framework built on PHP.</string>
 	<key>name</key>
-	<string>Smarty</string>
+	<string>PHP Smarty</string>
 	<key>ordering</key>
 	<array>
 		<string>EB4A8FA5-DFBD-43E9-B091-B1825E49DF33</string>
