--- a/info.plist
+++ b/info.plist
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>contactEmailRot13</key>
-	<string>zngf@vzrqvngrp.pb.hx</string>
+	<string>ohaqyrf@grkgzngr.bet</string>
 	<key>contactName</key>
-	<string>Mats Persson</string>
+	<string>Michael Sheets</string>
 	<key>deleted</key>
 	<array>
 		<string>93BC3115-0D5D-4855-890A-72C924706AFD</string>
