--- a/Snippets/smty.assign.plist
+++ b/Snippets/smty.assign.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Assign</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{assign</string>
 	<key>uuid</key>
