--- a/Snippets/smty.capitalize.plist
+++ b/Snippets/smty.capitalize.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Capitalize</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|cap</string>
 	<key>uuid</key>
