--- a/Snippets/smty.cat.plist
+++ b/Snippets/smty.cat.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Cat</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|cat</string>
 	<key>uuid</key>
