--- a/Snippets/smty.count_paragraphs.plist
+++ b/Snippets/smty.count_paragraphs.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Count Paragraphs</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|count</string>
 	<key>uuid</key>
