--- a/Snippets/smty.count_sentences.plist
+++ b/Snippets/smty.count_sentences.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Count Sentences</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|count</string>
 	<key>uuid</key>
