--- a/Snippets/smty.date_format.plist
+++ b/Snippets/smty.date_format.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Date Format</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|format</string>
 	<key>uuid</key>
