--- a/Snippets/smty.escape.plist
+++ b/Snippets/smty.escape.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Escape</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|esc</string>
 	<key>uuid</key>
