--- a/Snippets/smty.foreach.plist
+++ b/Snippets/smty.foreach.plist
@@ -9,7 +9,7 @@
 	<key>name</key>
 	<string>Foreach</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>{foreach</string>
 	<key>uuid</key>
