--- a/Snippets/smty.strip_tags.plist
+++ b/Snippets/smty.strip_tags.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Strip Tags</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|strip</string>
 	<key>uuid</key>
