--- a/Snippets/smty.truncate.plist
+++ b/Snippets/smty.truncate.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Truncate</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|trunc</string>
 	<key>uuid</key>
