--- a/Snippets/smty.wordwrap.plist
+++ b/Snippets/smty.wordwrap.plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>Word Wrap</string>
 	<key>scope</key>
-	<string>source.smarty</string>
+	<string>text.html.smarty</string>
 	<key>tabTrigger</key>
 	<string>|wrap</string>
 	<key>uuid</key>
