--- a/Syntaxes/Smarty.plist
+++ b/Syntaxes/Smarty.plist
@@ -36,16 +36,28 @@
 					<string>(\{%?)</string>
 					<key>beginCaptures</key>
 					<dict>
+						<key>0</key>
+						<dict>
+							<key>name</key>
+							<string>source.smarty</string>
+						</dict>
 						<key>1</key>
 						<dict>
 							<key>name</key>
 							<string>punctuation.section.embedded.begin.smarty</string>
 						</dict>
 					</dict>
+					<key>contentName</key>
+					<string>source.smarty</string>
 					<key>end</key>
 					<string>(%?\})</string>
 					<key>endCaptures</key>
 					<dict>
+						<key>0</key>
+						<dict>
+							<key>name</key>
+							<string>source.smarty</string>
+						</dict>
 						<key>1</key>
 						<dict>
 							<key>name</key>
@@ -53,7 +65,7 @@
 						</dict>
 					</dict>
 					<key>name</key>
-					<string>text.html.smarty</string>
+					<string>meta.embedded.line.tag.smarty</string>
 					<key>patterns</key>
 					<array>
 						<dict>
