Use injections for template tags
This means that template tags can now appear inside tags and tag attributes. Fixes #4.

--- a/Syntaxes/Smarty.plist
+++ b/Syntaxes/Smarty.plist
@@ -6,20 +6,29 @@
 	<array>
 		<string>tpl</string>
 	</array>
+	<key>injections</key>
+	<dict>
+		<key>text.html.smarty - (meta.embedded | meta.tag), L:text.html.smarty meta.tag</key>
+		<dict>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>include</key>
+					<string>#comments</string>
+				</dict>
+				<dict>
+					<key>include</key>
+					<string>#blocks</string>
+				</dict>
+			</array>
+		</dict>
+	</dict>
 	<key>keyEquivalent</key>
 	<string>^~S</string>
 	<key>name</key>
 	<string>Smarty</string>
 	<key>patterns</key>
 	<array>
-		<dict>
-			<key>include</key>
-			<string>#comments</string>
-		</dict>
-		<dict>
-			<key>include</key>
-			<string>#blocks</string>
-		</dict>
 		<dict>
 			<key>include</key>
 			<string>text.html.basic</string>
